--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    If the world was cyberpunk and some hellish force hacked all the devices, this would be the visual.
+		    If the world was cyberpunk and some hellish force hacked all the devices, this would be the visual. Takes a long time to load.
 	    </footer>
 	</body>
 </html>
